--- a/notebooks/dev-cert/sending-jobs.ipynb
+++ b/notebooks/dev-cert/sending-jobs.ipynb
@@ -16,19 +16,19 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "q-drag-and-drop-code\n",
-    "    .line from qiskit import *\n",
-    "    .line provider = IBMQ.load_account()\n",
-    "    .line qc = QuantumCircuit(2,2)\n",
-    "    .line (group = qc) qc.h(0)\n",
-    "    .line (group = qc) qc.cx(0,1)\n",
-    "    .line qc.measure_all()\n",
-    "    .line (group = run) backend = provider.get_backend('ibmq_manila')\n",
-    "    .line (group = run) shots = 1024\n",
-    "    .line job = execute(qc, backend, shots)"
+    "    q-drag-and-drop-code\n",
+    "        .line from qiskit import *\n",
+    "        .line provider = IBMQ.load_account()\n",
+    "        .line qc = QuantumCircuit(2,2)\n",
+    "        .line(group = 0) qc.h(0)\n",
+    "        .line(group = 0) qc.cx(0,1)\n",
+    "        .line qc.measure_all()\n",
+    "        .line(group = 1) backend = provider.get_backend('ibmq_manila')\n",
+    "        .line(group = 1) shots = 1024\n",
+    "        .line job = execute(qc, backend, shots)"
    ]
   },
   {
@@ -76,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -90,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
