Added outline to the last three chapters

--- a/notebooks/dev-cert/visualizations.ipynb
+++ b/notebooks/dev-cert/visualizations.ipynb
@@ -4,9 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic 1\n",
-    "\n",
-    "This is the first topic we'll write about."
+    "# Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statevectors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unitary Matrices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counts"
    ]
   },
   {
@@ -33,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
