--- a/notebooks/dev-cert/other-important-modules.ipynb
+++ b/notebooks/dev-cert/other-important-modules.ipynb
@@ -4,9 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic 1\n",
-    "\n",
-    "This is the first topic we'll write about."
+    "# Other Important Modules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NumPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PyPlot"
    ]
   },
   {
@@ -33,7 +45,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
