--- a/notebooks/dev-cert/retrieving-results.ipynb
+++ b/notebooks/dev-cert/retrieving-results.ipynb
@@ -4,9 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic 1\n",
-    "\n",
-    "This is the first topic we'll write about."
+    "# Retrieving Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to Retrieve Counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Statevector Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unitary Results"
    ]
   },
   {
@@ -33,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
