Added more detail to sending_jobs chapter

--- a/notebooks/dev-cert/sending-jobs.ipynb
+++ b/notebooks/dev-cert/sending-jobs.ipynb
@@ -19,6 +19,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here is a drag and drop code example of how to send a job with the following steps:\n",
+    "First, load your account.\n",
+    "Second, create a circuit, as we learned in previous chapters.\n",
+    "Third, create a job for the new circuit, in addition to finding a backend to send your circuit to.\n",
+    "In the next sections we'll learn more details about these actions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- ::: q-block.exercise -->\n",
+    "\n",
+    "### Turning a circuit into a job\n",
+    "\n",
     "    q-drag-and-drop-code\n",
     "        .line from qiskit import *\n",
     "        .line provider = IBMQ.load_account()\n",
@@ -28,7 +43,9 @@
     "        .line qc.measure_all()\n",
     "        .line(group = 1) backend = provider.get_backend('ibmq_manila')\n",
     "        .line(group = 1) shots = 1024\n",
-    "        .line job = execute(qc, backend, shots)"
+    "        .line job = execute(qc, backend, shots)\n",
+    "        \n",
+    "<!-- ::: -->"
    ]
   },
   {
