My first commit to textbook

--- a/notebooks/dev-cert/getting-access-to-qiskit.ipynb
+++ b/notebooks/dev-cert/getting-access-to-qiskit.ipynb
@@ -6,14 +6,16 @@
    "source": [
     "# Getting Access to Qiskit\n",
     "\n",
-    "This is the first topic we'll write about."
+    "The first thing we would like to do is be able to check the version of Qiskit we are using to avoid conflicts and deprecations. We would also like to be able to load our IBM-Q account for submitting jobs on the IBM machines which are open for use on the cloud. We would also like to import the most generic packages that would most likely be used through the workflow."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Qiskit Version"
+    "### Qiskit Version\n",
+    "\n",
+    "We can always check the "
    ]
   },
   {
@@ -63,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
