--- a/notebooks/dev-cert/introduction.ipynb
+++ b/notebooks/dev-cert/introduction.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In this compact course, we will be focusing on gaining mastery over some of the essential topics. This course is mainly aimed at learners who have the basics of quantum computing and Qiskit down, and would like to attempt the Developer Certification Exam to prove their competence officially. Thus, we will not go over the most basics of quantum computing for which you can always refer to the other chapters in the Qiskit textbook.\n",
     "\n",
-    "After this course, you will have gained a more detailed understanding of the basic functionality of the Qiskit SDK and will be at a point where you can perform these tasks on your own without referring to the documentation."
+    "After this course, you will have gained a more detailed understanding of the basic functionality of the Qiskit SDK and will be at a point where you can perform these tasks on your own without referring to the documentation. zzzz"
    ]
   },
   {
